--- a/style.css
+++ b/style.css
@@ -216,6 +216,7 @@ body {
     display: flex;
     justify-content: space-between;
     box-shadow: 0px 3px 3px rgba(255, 255, 255, 0.87) inset;
+    gap:5px;
 
     .box {
         width: 120px;
