--- a/style.css
+++ b/style.css
@@ -288,9 +288,11 @@ body {
     }
 
     .farming-btn {
-        position: relative;
-        top: 78%;
-        left: 10%;
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        top: 75%;
+        width: 100%;
 
         #btn {
             background-color: #808080;
