--- a/style.css
+++ b/style.css
@@ -138,6 +138,12 @@ body {
         font-family: Arial, Helvetica, sans-serif;
     }
 }
+.home-container {
+    height: 100%;
+    width: 100%;
+    background-color: rgb(78, 78, 77);
+    position: absolute;
+}
 
 .container {
     background-color: rgb(68, 62, 62);
