--- a/style.css
+++ b/style.css
@@ -291,11 +291,11 @@ body {
         font-size: 25px;
     }
 
-    .farming-btn {
+ .farming-btn {
         display: flex;
         justify-content: center;
-        position: absolute;
-        top: 75%;
+        position: fixed;
+        bottom: 12%;
         width: 100%;
 
         #btn {
@@ -304,11 +304,14 @@ body {
             height: 30px;
             font-size: 15px;
             font-weight: bold;
-            border-radius: 15px;
+            border-top-right-radius: 9px;
+            border-bottom-right-radius: 9px;
+            border-top-left-radius: 9px;
+            border-bottom-left-radius: 9px;
             color: #fff;
             outline: none;
             border: none;
-            /* opacity: 0.9; */
+            text-align: center;
         }
     }
 
