--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ body {
 
 .main-box {
     margin-top: 5px;
-    height: 450px;
+    height: calc(100vh - 50px);
     background-image: url(images/Mew.PNG);
     background-position: center;
     background-size: cover;
