--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 
 .container {
     background-color: rgb(68, 62, 62);
-    height: 100%;
+    height: calc(100vh-50px);
     width: 100%;
 }
 
