--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ body {
 
 .main-box {
     margin-top: 5px;
-        height: 260px;
+        height: 60vh;
     background-image: url(images/Mew.PNG);
     background-position: center;
     background-size: cover;
