--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body {
     }
 }
 .home-container {
-    height: 100%;
+    height: 90vh;
     width: 100%;
     position: absolute;display:none;
 }
