--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
     background-color: rgb(68, 62, 62);
     width: 100%;
     overflow:hidden;
-     height:calc(100vh - 50px) ;
+     height:100vh ;
 }
 
 .header {
