--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body {
     text-align: center;
     width: 100%;
     position: absolute;
-    bottom: 15px;
+    bottom: 115px;
 
 
     .LT1 {
@@ -215,14 +215,17 @@ body {
 
     .level {
         display: flex;
-        gap: 20px;
+        gap: 10px;
+        align-items: center;
 
         .level-name {
             display: flex;
-            gap: 5px;
+            gap: 7px;
+            align-items: center;
 
             i {
-                font-size: 18px;
+                font-size: 10px;
+                color: #fff;
             }
         }
 
@@ -256,7 +259,7 @@ body {
     border-top-right-radius: 15px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 3px 3px 3px rgba(255, 255, 255, 0.87) inset;
+    box-shadow: 0px 0px 0px 6px rgba(255, 255, 255, 0.87) inset;
     gap: 5px;
 
     .box {
@@ -937,7 +940,7 @@ p.daily-tasks {
 
 .mission-option {
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
     font-weight: bolder;
     width: 100%;
     padding: 0 15px;
