--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
 
         .channel-box {
             display: flex;
+             flex-direction: row;
             gap: 15px;
             justify-content: center;
             text-align: center;
@@ -189,6 +190,7 @@ body {
 .header {
     padding: 15px 15px;
     display: flex;
+     flex-direction: row;
     justify-content: space-between;
 }
 
@@ -259,7 +261,7 @@ body {
     border-top-right-radius: 15px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0px 0px 0px 6px rgba(255, 255, 255, 0.87) inset;
+    box-shadow: 0px 0px 0px 3px rgba(255, 255, 255, 0.87) inset;
     gap: 5px;
 
     .box {
@@ -378,6 +380,7 @@ body {
     background-color: rgba(0, 0, 0, 0.918);
     display: flex;
     gap: 10px;
+     flex-direction: row;
     justify-content: space-between;
     position: fixed;
     width: 100vw;
